Change px to rem and dark mode fix

--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -6,8 +6,8 @@
   background-color: black;
   color: white;
   text-align: center;
-  padding: 8px 0;
-  font-size: 14px;
+  padding: 0.5rem 0;
+  font-size: 0.875rem;
   transition: background-color 0.3s, color 0.3s;
 }
 
